fixed styling bug where footer would be too large on mobile made bug (not having the fullname available) a little less worse by now showing username instead of "<no name available>"

--- a/public/main.css
+++ b/public/main.css
@@ -325,11 +325,8 @@ body.theme-dark .theme-chooser .enable-dark-theme-a {
 }
 
 .footer {
-  /* display: none; */
-}
-
-.footer {
   width: 438px;
+  max-width: 100%;
   height: 58px;
   padding: 10px 0px;
   text-align: center;
@@ -337,6 +334,7 @@ body.theme-dark .theme-chooser .enable-dark-theme-a {
 
 .footer .links {
   width: 398px;
+  max-width: calc(100% - 40px);
   padding: 10px 20px;
 }
 
